--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculators</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/css/styles.css" />
+    <link rel="stylesheet" href="src/css/normalize.css" />
+    <script
+      src="https://kit.fontawesome.com/a6083f8adb.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Geometryx - Calculators</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav-contain">
+        <a href="">
+          <img
+            src="src/img/profileWhite.png"
+            alt="Avatar Image"
+            class="avatar img"
+          />
+          <span class="avatar-span">@alexruix</span>
+        </a>
+      </div>
+      <a href="index.html" lass="link">
+        <h1 class="title">Geometryx</h1>
+      </a>
+      <div class="nav-contain">
+        <a href="" class="btn-icon">
+          <i class="btn-icon-svg fa-brands fa-linkedin-in"></i>
+          <!-- <span class="btn-span">Linkedin</span> -->
+        </a>
+        <a href="" class="btn-icon">
+          <i class="btn-icon-svg fa-brands fa-behance"></i>
+          <!-- <span class="btn-span">Portfolio</span> -->
+        </a>
+      </div>
+    </nav>
+    <div class="layout">
+      <header class="header">
+        <div class="card card-header">
+          <img
+            src="src/img/circle.png"
+            alt="area and perimeter"
+            class="img card-img"
+          />
+          <div class="card-contain">
+            <h2 class="card-title">Area y perímetro</h2>
+            <p class="card-text">
+              Calculadora para figuras geometricas simples: cuadrado, rectángulo, círculo y triangulo.
+            </p>
+          </div>
+        </div>
+      </header>
+
+      <main>
+        <div class="grid">
+          <a href="figurasgeometricas.html">
+            <div class="card">
+              <img
+                src="src/img/circle.png"
+                alt="area and perimeter"
+                class="card-img"
+              />
+              <div class="card-contain">
+                <h2 class="card-title">Area y perímetro</h2>
+                <p class="card-text">
+                  Calculadora para figuras geometricas simples: cuadrado, rectángulo, círculo y triangulo.
+                </p>
+              </div>
+            </div>
+          </a>
+
+          <div class="card">
+            <img src="src/img/price.png" alt="area and perimeter" class="card-img" />
+            <div class="card-contain">
+              <h1 class="card-title">Precios y descuentos</h1>
+              <p class="card-text">
+                Calcula el precios final agregando descuentos y cupones.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="src/img/discount.png" alt="area and perimeter" class="card-img" />
+            <div class="card-contain">
+              <h2 class="card-title">Promedios, moda y mediana</h2>
+              <p class="card-text">
+                Calculadora de promedios, moda y mediana.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="src/img/dollar.png" alt="area and perimeter" class="card-img" />
+            <div class="card-contain">
+              <h2 class="card-title">Análisis de mediana salarial</h2>
+              <p class="card-text">
+                Calcula la mediana y el top 10 de salarios.
+              </p>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
