--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/a6083f8adb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Geometryx - Calculators</title>
+    <title>Geometryx - Calculators Platzi 'Curso Práctico de JavaScript'</title>
   </head>
   <body>
     <nav class="nav">
@@ -31,56 +31,80 @@
         </a>
       </div>
       <a href="index.html" lass="link">
-        <h1 class="title">Geometryx</h1>
+        <h1 class="title title-link">Geometryx</h1>
       </a>
       <div class="nav-contain">
-        <a href="" class="btn-icon">
+        <a href="https://www.linkedin.com/in/alexruix/" class="btn-icon">
           <i class="btn-icon-svg fa-brands fa-linkedin-in"></i>
           <!-- <span class="btn-span">Linkedin</span> -->
         </a>
-        <a href="" class="btn-icon">
-          <i class="btn-icon-svg fa-brands fa-behance"></i>
+        <a href="https://github.com/alexruix" class="btn-icon">
+          <i class="btn-icon-svg fa-brands fa-github"></i>
           <!-- <span class="btn-span">Portfolio</span> -->
         </a>
       </div>
     </nav>
     <div class="layout">
       <header class="header">
-        <div class="card card-header">
-          <img
-            src="src/img/circle.png"
-            alt="area and perimeter"
-            class="img card-img"
-          />
+        <div class="card card-header platzi">
+          <img src="src/img/js-challenge-logo.png" alt="" class="card-img" />
           <div class="card-contain">
-            <h2 class="card-title">Area y perímetro</h2>
-            <p class="card-text">
-              Calculadora para figuras geometricas simples: cuadrado, rectángulo, círculo y triangulo.
-            </p>
+            <h2 class="card-title">Curso Práctico de JavaScript - Platzi</h2>
+            <span class="card-text">
+              Este sitio web fue creado en base al curso práctico de JavaScript
+              de Platzi.
+              <br />
+              <b>Temas vistos en el curso:</b>
+              <ul class="card-text">
+                <li>
+                  <span> Manipulación del DOM </span>
+                </li>
+
+                <li>
+                  <span> Manipulación de Array </span>
+                </li>
+
+                <li>
+                  <span> Functions </span>
+                </li>
+
+                <li>
+                  <span> HTML y CSS </span>
+                </li>
+
+                <li>
+                  <span> Animaciones y transiciones </span>
+                </li>
+              </ul>
+            </span>
           </div>
         </div>
       </header>
 
       <main>
+        <h2 class="title">Calculadoras</h2>        
         <div class="grid">
-          <a href="figurasgeometricas.html">
-            <div class="card">
-              <img
-                src="src/img/circle.png"
-                alt="area and perimeter"
-                class="card-img"
-              />
-              <div class="card-contain">
-                <h2 class="card-title">Area y perímetro</h2>
-                <p class="card-text">
-                  Calculadora para figuras geometricas simples: cuadrado, rectángulo, círculo y triangulo.
-                </p>
-              </div>
+          <div class="card taller1">
+            <img
+              src="src/img/circle.png"
+              alt="area and perimeter"
+              class="card-img"
+            />
+            <div class="card-contain">
+              <h2 class="card-title">Area y perímetro</h2>
+              <p class="card-text">
+                Calculadora para figuras geometricas simples: cuadrado,
+                rectángulo, círculo y triangulo.
+              </p>
             </div>
-          </a>
+          </div>
 
-          <div class="card">
-            <img src="src/img/price.png" alt="area and perimeter" class="card-img" />
+          <div class="card taller2">
+            <img
+              src="src/img/price.png"
+              alt="area and perimeter"
+              class="card-img"
+            />
             <div class="card-contain">
               <h1 class="card-title">Precios y descuentos</h1>
               <p class="card-text">
@@ -89,18 +113,24 @@
             </div>
           </div>
 
-          <div class="card">
-            <img src="src/img/discount.png" alt="area and perimeter" class="card-img" />
+          <div class="card taller3">
+            <img
+              src="src/img/discount.png"
+              alt="area and perimeter"
+              class="card-img"
+            />
             <div class="card-contain">
               <h2 class="card-title">Promedios, moda y mediana</h2>
-              <p class="card-text">
-                Calculadora de promedios, moda y mediana.
-              </p>
+              <p class="card-text">Calculadora de promedios, moda y mediana.</p>
             </div>
           </div>
 
-          <div class="card">
-            <img src="src/img/dollar.png" alt="area and perimeter" class="card-img" />
+          <div class="card talller4">
+            <img
+              src="src/img/dollar.png"
+              alt="area and perimeter"
+              class="card-img"
+            />
             <div class="card-contain">
               <h2 class="card-title">Análisis de mediana salarial</h2>
               <p class="card-text">
@@ -111,5 +141,6 @@
         </div>
       </main>
     </div>
+    <script src="src/js/location.js"></script>
   </body>
 </html>
