I added new features

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/css/styles.css" />
+    <link rel="stylesheet" href="src/css/styles.min.css" />
     <link rel="stylesheet" href="src/css/normalize.css" />
     <script
       src="https://kit.fontawesome.com/a6083f8adb.js"
@@ -21,13 +22,13 @@
   <body>
     <nav class="nav">
       <div class="nav-contain">
-        <a href="">
+        <a class="nav-avatar" href="https://alexruix.netlify.app/">
           <img
             src="src/img/profileWhite.png"
             alt="Avatar Image"
             class="avatar img"
           />
-          <span class="avatar-span">@alexruix</span>
+          <span class="avatar-span">Alex Ruiz</span>
         </a>
       </div>
       <a href="index.html" lass="link">
